--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% if pwa_mode %}
+  <link rel="manifest" href="{{ manifest_url }}" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="{{ name }}">
+  {% if icons %}
+  {% for icon in icons %}
+  <link rel="apple-touch-icon" sizes="{{ icon.sizes }}" href="{{ icon.src }}" type="{{ icon.type }}">
+  {% endfor %}
+  {% endif %}
+  {% endif %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{ title }}</title>
   {% if robots %}
