--- a/admin/view/template/setting/setting.twig
+++ b/admin/view/template/setting/setting.twig
@@ -104,27 +104,40 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_default_mode }}">{{ entry_default_mode }}</span></label>
+                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_pwa_mode }}">{{ entry_pwa_mode }}</span></label>
                 <div class="col-sm-10">
                   <label class="radio-inline">
-                    <input type="radio" name="config_default_mode" value="light" {{ config_default_mode == 'light' ? 'checked' : '' }}>
+                    <input type="radio" name="config_pwa_mode" value="1" {{ config_pwa_mode ? 'checked' : '' }}>
+                    {{ text_yes }}
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="config_pwa_mode" value="0" {{ not config_pwa_mode ? 'checked' : '' }}>
+                    {{ text_no }}
+                  </label>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_default_theme }}">{{ entry_default_theme }}</span></label>
+                <div class="col-sm-10">
+                  <label class="radio-inline">
+                    <input type="radio" name="config_default_theme" value="light" {{ config_default_theme == 'light' ? 'checked' : '' }}>
                     {{ text_light }}
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="config_default_mode" value="dark" {{ config_default_mode == 'dark' ? 'checked' : '' }}>
+                    <input type="radio" name="config_default_theme" value="dark" {{ config_default_theme == 'dark' ? 'checked' : '' }}>
                     {{ text_dark }}
                   </label>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_toggle_mode }}">{{ entry_toggle_mode }}</span></label>
+                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_theme_toggle }}">{{ entry_theme_toggle }}</span></label>
                 <div class="col-sm-10">
                   <label class="radio-inline">
-                    <input type="radio" name="config_toggle_mode" value="1" {{ config_toggle_mode ? 'checked' : '' }}>
+                    <input type="radio" name="config_theme_toggle" value="1" {{ config_theme_toggle ? 'checked' : '' }}>
                     {{ text_yes }}
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="config_toggle_mode" value="0" {{ not config_toggle_mode ? 'checked' : '' }}>
+                    <input type="radio" name="config_theme_toggle" value="0" {{ not config_theme_toggle ? 'checked' : '' }}>
                     {{ text_no }}
                   </label>
                 </div>
