--- a/catalog/view/theme/default/template/common/menu.twig
+++ b/catalog/view/theme/default/template/common/menu.twig
@@ -4,7 +4,7 @@
       <div class="navbar-menu">
         <div class="navbar-start has-text-weight-bold">
           {% if categories %}
-          <div class="navbar-item catalog-trigger">
+          <div class="catalog-trigger navbar-item">
             <button class="button is-primary is-light pl-5 pr-4 is-flex is-aling-items-center is-fullwidth">
               <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 14 14" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
@@ -14,15 +14,27 @@
               <span class="has-text-weight-bold">{{ text_category }}</span>
             </button>
           </div>
+          {% endif %}          
+          {% if brands and brands_modal %}
+          <div class="brands-trigger navbar-item">
+            <button class="button is-primary is-light pl-5 pr-4 is-flex is-aling-items-center is-fullwidth">
+              <span class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                  <path d="m5.416875 7.895624999999999 0.9406249999999999 1.075625a0.625 0.625 0 0 0 0.9775 -0.045625L9.583125 5.8125" stroke-width="1"></path>
+                  <path d="M6.070625 2.275c0.363125 -0.309375 0.545 -0.464375 0.735 -0.555a1.610625 1.610625 0 0 1 1.38875 0c0.19 0.090625 0.37187499999999996 0.245625 0.735 0.555 0.374375 0.31875 0.754375 0.48 1.254375 0.5193749999999999 0.475625 0.038125 0.7137499999999999 0.057499999999999996 0.9125 0.1275 0.45875 0.1625 0.8200000000000001 0.523125 0.9818749999999999 0.9825 0.07 0.198125 0.089375 0.43624999999999997 0.1275 0.9125 0.039375 0.5 0.2 0.879375 0.5187499999999999 1.25375 0.31 0.363125 0.46499999999999997 0.545 0.555625 0.735 0.21000000000000002 0.43937499999999996 0.21000000000000002 0.95 0 1.38875 -0.090625 0.19 -0.245625 0.37187499999999996 -0.555 0.735a2.06625 2.06625 0 0 0 -0.5193749999999999 1.254375c-0.038125 0.475625 -0.057499999999999996 0.7137499999999999 -0.1275 0.9125a1.610625 1.610625 0 0 1 -0.9825 0.9818749999999999c-0.198125 0.07 -0.43624999999999997 0.089375 -0.9125 0.1275 -0.5 0.039375 -0.879375 0.2 -1.25375 0.5187499999999999 -0.363125 0.31 -0.545 0.46499999999999997 -0.735 0.555625a1.610625 1.610625 0 0 1 -1.38875 0c-0.19 -0.090625 -0.37187499999999996 -0.245625 -0.735 -0.555a2.06625 2.06625 0 0 0 -1.254375 -0.5193749999999999c-0.475625 -0.038125 -0.7137499999999999 -0.057499999999999996 -0.9125 -0.1275a1.610625 1.610625 0 0 1 -0.9818749999999999 -0.9825c-0.07 -0.198125 -0.089375 -0.43624999999999997 -0.1275 -0.9125a2.0656250000000003 2.0656250000000003 0 0 0 -0.5187499999999999 -1.25375c-0.31 -0.363125 -0.46499999999999997 -0.545 -0.55625 -0.735a1.610625 1.610625 0 0 1 0.000625 -1.38875c0.090625 -0.19 0.245625 -0.37187499999999996 0.555 -0.735 0.325 -0.38187499999999996 0.480625 -0.764375 0.5193749999999999 -1.254375 0.038125 -0.475625 0.057499999999999996 -0.7137499999999999 0.1275 -0.9125a1.610625 1.610625 0 0 1 0.9825 -0.9818749999999999c0.198125 -0.07 0.43624999999999997 -0.089375 0.9125 -0.1275a2.0656250000000003 2.0656250000000003 0 0 0 1.25375 -0.5187499999999999" stroke-width="1"></path>
+                </svg>
+              </span>
+              <span class="has-text-weight-bold">{{ text_brands }}</span>
+            </button>
+          </div>
+          {% else %}
+          <a class="navbar-item" href="{{ brands.href }}">
+            {{ brands.name }}
+          </a>  
           {% endif %}
           {% if special %}
           <a class="navbar-item" href="{{ special.href }}">
             {{ special.name }}
-          </a>
-          {% endif %}
-          {% if brands %}
-          <a class="navbar-item" href="{{ brands.href }}">
-            {{ brands.name }}
           </a>
           {% endif %}
           {{ blog }}
@@ -162,22 +174,71 @@
   </div>
   {% endif %}
 
+  {% if brands and brands_modal %}
+  <div class="modal is-justify-content-flex-start" id="brands-modal">
+    <div class="modal-background"></div>
+    <div class="modal-content box p-3 mt-3">
+      <nav id="brands">
+        <div class="is-flex is-justify-content-space-between is-align-items-center px-3 mb-3">
+          <div class="is-size-3 has-text-weight-bold">
+            {{ text_brands }}
+          </div>
+          <button class="delete is-large is-dark" aria-label="close"></button>
+        </div>
+        <div class="columns is-mobile is-multiline p-3">
+          {% for brand in brands %}
+          <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-6-tablet is-6-mobile">
+            <a href="{{ brand.href }}" class="box has-text-centered">
+              {% if brand.thumb %}
+              <span class="is-block mb-3">
+                <img src="{{ brand.thumb }}" alt="{{ brand.name }}">
+              </span>
+              {% endif %}
+              <span class="has-text-weight-bold">
+                {{ brand.name }}
+              </span>
+            </a>
+          </div>
+          {% endfor %}
+        </div>
+      </nav>
+    </div>    
+  </div>
+  {% endif %}
+
   <script>
   {% if categories %}
-    $('body').on('click', '.catalog-trigger, #catalog-modal .delete, #catalog-modal .modal-background', function (e) {
+  $('body').on('click', '.catalog-trigger, #catalog-modal .delete, #catalog-modal .modal-background', function (e) {
 
-      if ($(e.currentTarget).hasClass('modal-background') || $(e.currentTarget).hasClass('delete')) {
-        $('#catalog-modal').addClass('is-animated');
+    if ($(e.currentTarget).hasClass('modal-background') || $(e.currentTarget).hasClass('delete')) {
+      $('#catalog-modal').addClass('is-animated');
 
-        $('#catalog-modal .modal-background').one('animationend', function () {
-          $('#catalog-modal').removeClass('is-animated is-active');
-          history.replaceState(null, null, window.location.pathname + window.location.search);
-        });
-      } else {
-        $('#catalog-modal').addClass('is-active');
-        history.pushState(null, null, window.location.pathname + '#catalog-modal');
-      }
-    });
+      $('#catalog-modal .modal-background').one('animationend', function () {
+        $('#catalog-modal').removeClass('is-animated is-active');
+        history.replaceState(null, null, window.location.pathname + window.location.search);
+      });
+    } else {
+      $('#catalog-modal').addClass('is-active');
+      history.pushState(null, null, window.location.pathname + '#catalog-modal');
+    }
+  });
+  {% endif %}
+
+  {% if brands and brands_modal %}
+  $('body').on('click', '.brands-trigger, #brands-modal .delete, #brands-modal .modal-background', function (e) {
+
+    if ($(e.currentTarget).hasClass('modal-background') || $(e.currentTarget).hasClass('delete')) {
+      $('#brands-modal').addClass('is-animated');
+
+      $('#brands-modal .modal-background').one('animationend', function () {
+        $('#brands-modal').removeClass('is-animated is-active');
+        history.replaceState(null, null, window.location.pathname + window.location.search);
+      });
+    } else {
+      $('#brands-modal').addClass('is-active');
+      history.pushState(null, null, window.location.pathname + '#brands-modal');
+    }
+  });
   {% endif %}
 
   $('body').on('click', '.mobile-menu-trigger', function (e) {
