--- a/catalog/view/theme/default/template/blog/review.twig
+++ b/catalog/view/theme/default/template/blog/review.twig
@@ -1,11 +1,11 @@
 {% if reviews %}
 {% for review in reviews %}
-<div class="panel">
-  <div class="panel-block is-flex is-justify-content-space-between is-align-items-center">
+<div class="box">
+  <div class="is-flex is-justify-content-space-between is-align-items-center">
     <span><strong>{{ review.author }}</strong></span>
     <span class="text-right">{{ review.date_added }}</span>
   </div>
-  <div class="panel-block is-block">
+  <div class="mt-3">
     <p class="has-text-grey">{{ review.text }}</p>
     {% if review.reply %}
     <div class="mt-2">
