--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -24,7 +24,10 @@ button {
 }
 
 .anycategories .column>.box,
-.special .column>.box .latest .column>.box .featured .column>.box .bestseller .column>.box {
+.special .column>.box,
+.latest .column>.box,
+.featured .column>.box,
+.bestseller .column>.box {
   height: 100%;
 }
 
@@ -514,19 +517,13 @@ input[type="search"]::-webkit-search-results-decoration {
 
 @keyframes rotating {
   from {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
     transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
   }
 
   to {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
     transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
   }
 }
 
@@ -702,24 +699,6 @@ footer .scroll-top-trigger.shown {
 
 .radio-ui:has(input[type="radio"]:checked) {
   box-shadow: inset 0 0 0 2px #0055d4;
-}
-
-@keyframes rotating {
-  from {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  to {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
 }
 
 @keyframes fadeOutModalBackground {
